--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3",
-    "typescript-plugin-css-modules": "3.4.0"
+    "typescript-plugin-css-modules": "3.4.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
