--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/nunito": "4.5.9",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript-plugin-css-modules": "3.4.0",
     "uuid": "8.3.2"
   },
