--- a/backend/api/docker-compose.yml
+++ b/backend/api/docker-compose.yml
@@ -12,6 +12,7 @@ services:
   advinheme:
     build: .
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    # command: bash -c "python manage.py runserver 0.0.0.0:8000"
     container_name: AdvinheMe
     volumes:
     - .:/app
